0.7.0/_sources/reference/papers.rst
.. _papers:

****************************************
Papers citing `SpectroChemPy`
****************************************

2025
====

- Tracking solid electrolyte interphase dynamics using operando fibre-optic infra-red spectroscopy and multivariate
  curve regression
  :cite:t:`Leau:2025`, `DOI: 10.1038/s41467-024-55339-y <https://doi.org/10.1038/s41467-024-55339-y>`__.

- Discriminating Analysis of Metal Ions via Multivariate Curve Resolution–Alternating Least Squares Applied to Silver
  Nanoparticle Sensor,
  :cite:t:`Rossi:2025`, `DOI: 10.3390/nano15010057 <https://doi.org/10.3390/nano15010057>`__.

2024
====

- Metal-organic frameworks based on pyrazolates for the selective and efficient capture of formaldehyde
  :cite:t:`Sadovnik:2024`, `DOI: 10.1038/s41467-024-53572-z <https://doi.org/10.1038/s41467-024-53572-z>`__.

- Investigating nalidixic acid adsorption onto ferrihydrite and maghemite surfaces: molecular-level insights via
  continuous-flow ATR-FTIR spectroscopy,
  :cite:t:`Schuh-Frantz:2024`, `DOI: 10.1039/D4NJ03440F <http://dx.doi.org/10.1039/D4NJ03440F>`__.

- External Acidity as Performance Descriptor in Polyolefin Cracking using Zeolite-Based Materials,
  :cite:t:`Rejman:2024`, `DOI: 10.26434/chemrxiv-2024-4fq4v <https://doi.org/10.26434/chemrxiv-2024-4fq4v>`__.

- Deriving kinetic insights from mechanochemically synthesized compounds using multivariate analysis (MCR-ALS) of powder
  X-ray diffraction data,
  :cite:t:`Macchietti:2024`, `DOI: 10.1039/D3MR00013C <http://dx.doi.org/10.1039/D3MR00013C>`__.

- An intuitive approach for spike removal in Raman spectra based on peaks’ prominence and width,
  :cite:t:`coca-lopez:2024`, `DOI: 10.1016/j.aca.2024.342312 <https://doi.org/10.1016/j.aca.2024.342312>`__.

2023
====

- Cyclohexane Oxidative Dehydrogenation on Graphene-Oxide-Supported Cobalt Ferrite
  Nanohybrids: Effect of Dynamic Nature of Active Sites on Reaction Selectivity,
  :cite:t:`kadam:2023`, `DOI: 10.1021/acscatal.3c02592 <https://doi.org/10.1021/acscatal.3c02592>`__.

- Study of the diffusion properties of zeolite mixtures by combined gravimetric
  analysis, IR spectroscopy and inversion methods (IRIS),
  :cite:t:`ait-blal:2023`, `DOI: 10.1039/D3CP01585H <http://dx.doi.org/10.1039/D3CP01585H>`__.

- FTIR dataset from the article "Resistance to
  Degradation of Silk Fibroin Hydrogels Exposed to Neuroinflammatory Environments",
  :cite:t:`yonesi:2023`, `DOI: 10.5281/zenodo.7921117 <https://doi.org/10.5281/zenodo.7921117>`__.

- Understanding the patterns that neural networks learn from chemical spectra,
  :cite:t:`rieger:2023`, `DOI: 10.26434/chemrxiv-2023-8pfk5 <https://dx.doi.org/10.26434/chemrxiv-2023-8pfk5>`__.

2022
====

- Observation of surface species in plasma-catalytic dry reforming of methane in a novel atmospheric pressure dielectric
  barrier discharge in situ IR cell,
  :cite:t:`vanturnhout:2022`, `DOI: 10.1039/D2CY00311B <https://dx.doi.org/10.1039/D2CY00311B>`__.

- Développement d’outils de traitement de données de spectroscopie massives dans le contexte de la dépollution
  automobile,
  :cite:t:`helie:2022`, `HAL: tel-04077817 <https://theses.hal.science/tel-04077817>`__.

2021
====

- Catalysis by sulfides: Advanced IR/CO spectroscopy for the identification of the most active sites in
  hydrodesulfurization reactions,
  :cite:t:`oliviero:2021`, `DOI: 10.1016/j.jcat.2021.02.018 <https://dx.doi.org/10.1016/j.jcat.2021.02.018>`__.

- A highly selective FER-based catalyst to produce n-butenes from isobutanol,
  :cite:t:`vandaele:2021`, `DOI: 10.1016/j.apcatb.2020.119699 <https://dx.doi.org/10.1016/j.apcatb.2020.119699>`__.
